# Configurations
cmake_minimum_required(VERSION 3.20.0)
get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)

set(PROJECT_CONFIG_NAME
    "ezored"
    CACHE STRING "Project Name"
)

set(PROJECT_CONFIG_CXX_STANDARD
    "17"
    CACHE STRING "Cpp Standard"
)

set(PROJECT_TARGET_NAME
    "ios"
    CACHE STRING "Target Name"
)

set(PROJECT_CONFIG_VERSION
    "1.0.0"
    CACHE STRING "Version"
)

set(PROJECT_CONFIG_ARCH
    "armv8"
    CACHE STRING "Architecture"
)

set(PROJECT_CONFIG_PLATFORM_ARCH
    "arm64"
    CACHE STRING "Platform Architecture"
)

set(PROJECT_CONFIG_GROUP
    "ios"
    CACHE STRING "Group"
)

set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})

set(PROJECT_BUILD_PATH
    ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_GROUP}/${PROJECT_CONFIG_ARCH}
    CACHE INTERNAL ""
)

# Platform configurations
set(PROJECT_USE_CXX_HTTP_CLIENT
    NO
    CACHE STRING "CXX Http Client"
)

set(CMAKE_OSX_ARCHITECTURES "${PROJECT_CONFIG_PLATFORM_ARCH}")

set(DEVELOPMENT_TEAM_ID
    ""
    CACHE STRING "Development Team ID"
)

set(CODE_SIGN_IDENTITY
    ""
    CACHE STRING "Sign Identity"
)

set(FRAMEWORK_NAME
    "${PROJECT_CONFIG_NAME}"
    CACHE STRING "Framework Name"
)

set(FRAMEWORK_BUNDLE_IDENTIFIER
    "com.ezored.library"
    CACHE STRING "Bundle Identifier"
)

if(PROJECT_CONFIG_GROUP STREQUAL "ios" OR "ios_simulator")
    set(DEVICE_FAMILY
        "1,2"
        CACHE STRING "Device Family"
    )
elseif(PROJECT_CONFIG_GROUP STREQUAL "tvos" OR "tvos_simulator")
    set(DEVICE_FAMILY
        "3"
        CACHE STRING "Device Family"
    )
elseif(PROJECT_CONFIG_GROUP STREQUAL "watchos")
    set(DEVICE_FAMILY
        "4"
        CACHE STRING "Device Family"
    )
    set(CMAKE_SYSTEM_VERSION "10.5")
elseif(PROJECT_CONFIG_GROUP STREQUAL "watchos_simulator")
    set(DEVICE_FAMILY
        "4"
        CACHE STRING "Device Family"
    )
    set(CMAKE_SYSTEM_VERSION "10.5")
endif()

# Project
project(${PROJECT_CONFIG_NAME})

# Conan
include(${PROJECT_BUILD_PATH}/conan/conanbuildinfo.cmake)
conan_basic_setup()

# Common
include(${PROJECT_ROOT_PATH}/files/common/cmake/common.cmake)

# Framework links
set(PROJECT_FRAMEWORK_LINKS
    ${PROJECT_FRAMEWORK_LINKS} "-framework Foundation"
    CACHE INTERNAL ""
)

# C flags
set(PROJECT_CMAKE_C_FLAGS
    "${PROJECT_CMAKE_C_FLAGS} -fobjc-arc -fobjc-abi-version=2"
    CACHE INTERNAL ""
)

# CXX flags
set(PROJECT_CMAKE_CXX_FLAGS
    "${PROJECT_CMAKE_CXX_FLAGS} -fobjc-arc -fobjc-abi-version=2 -stdlib=libc++"
    CACHE INTERNAL ""
)

# Flags
set(CMAKE_C_FLAGS
    "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}"
    CACHE INTERNAL ""
)

set(CMAKE_CXX_FLAGS
    "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}"
    CACHE INTERNAL ""
)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O3")

# Project
include_directories(${PROJECT_HEADER_SEARCH_PATHS})
link_directories(${PROJECT_LIBRARY_SEARCH_PATHS})

add_library(${PROJECT_CONFIG_NAME} SHARED ${PROJECT_SOURCE_FILES_MERGED})

target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_LIBRARY_LINKS}")
target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_FRAMEWORK_LINKS}")
target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")

set_target_properties(
    ${PROJECT_CONFIG_NAME}
    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CXX_STANDARD}"
               CXX_STANDARD_REQUIRED YES
               CXX_EXTENSIONS NO
               CXX_VISIBILITY_PRESET default
               FRAMEWORK TRUE
               FRAMEWORK_VERSION A
               MACOSX_FRAMEWORK_IDENTIFIER "${FRAMEWORK_BUNDLE_IDENTIFIER}"
               MACOSX_FRAMEWORK_BUNDLE_VERSION "${PROJECT_CONFIG_VERSION}"
               MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"
               XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${FRAMEWORK_BUNDLE_IDENTIFIER}"
               XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "${CMAKE_OSX_DEPLOYMENT_TARGET}"
               XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${CODE_SIGN_IDENTITY}"
               XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED NO
               XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${DEVELOPMENT_TEAM_ID}"
               XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "${DEVICE_FAMILY}"
               XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH YES
               XCODE_ATTRIBUTE_SKIP_INSTALL YES
               VERSION "${PROJECT_CONFIG_VERSION}"
               SOVERSION "${PROJECT_CONFIG_VERSION}"
)

if(PROJECT_CONFIG_GROUP STREQUAL "ios_catalyst")
    set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES INSTALL_RPATH "@loader_path/../../..")
else()
    set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES XCODE_ATTRIBUTE_INSTALL_PATH "@loader_path/Frameworks")
endif()

target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")

target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}" HAS_UNCAUGHT_EXCEPTIONS=0)
